--- a/sweep.yaml
+++ b/sweep.yaml
@@ -39,8 +39,5 @@ docs: []
 
 # Sandbox executes commands in a sandboxed environment to validate code changes after every edit to guarantee pristine code. For more details, see the [Sandbox](./sandbox) page.
 sandbox:
-  install:
-    - trunk init
-  check:
-    - trunk fmt {file_path} || return 0
-    - trunk check --fix --print-failures {file_path}
+  install: []
+  check: []
