--- a/sweep.yaml
+++ b/sweep.yaml
@@ -40,4 +40,5 @@ docs: []
 # Sandbox executes commands in a sandboxed environment to validate code changes after every edit to guarantee pristine code. For more details, see the [Sandbox](./sandbox) page.
 sandbox:
   install: []
-  check: []
+  check:
+    - 'if [[ "{file_path}" == *.py ]]; then PYTHONPATH=. python {file_path}; else exit 0; fi'
