--- a/sweep.yaml
+++ b/sweep.yaml
@@ -41,4 +41,5 @@ docs: []
 sandbox:
   install: []
   check:
-    - 'if [[ "{file_path}" == *.py ]]; then PYTHONPATH=. python {file_path}; else exit 0; fi'
+    - 'if [[ "{file_path}" == *.py ]]; then PYTHONPATH=src/backend python {file_path}; else exit 0; fi'
+
